crates/mabo-kotlin/tests/snapshots/render__render@attribute_unit.mabo.snap
---
source: crates/mabo-kotlin/tests/render.rs
description: "#[deprecated]\nstruct Sample"
input_file: crates/mabo-parser/tests/inputs/attribute_unit.mabo
---
--- sample.kt

package sample

import java.math.BigInteger
import java.nio.ByteBuffer
import kotlin.UByte
import kotlin.UShort
import kotlin.UInt
import kotlin.ULong

import rocks.dnaka91.mabo.*
import rocks.dnaka91.mabo.buf.*

public object Sample : Decode, Encode Size {
    override fun encode(w: ByteBuffer) {
    }

    override fun size(): Int = 0

}


