crates/mabo-kotlin/tests/snapshots/render__render@attributes.mabo.snap
---
source: crates/mabo-kotlin/tests/render.rs
description: "#[deprecated = \"don't use\", compress]\n#[validate(\n    in_range(min = 100, max = 200),\n    non_empty,\n)]\nstruct Sample"
input_file: crates/mabo-parser/tests/inputs/attributes.mabo
---
--- sample.kt

package sample

import java.math.BigInteger
import java.nio.ByteBuffer
import kotlin.UByte
import kotlin.UShort
import kotlin.UInt
import kotlin.ULong

import rocks.dnaka91.mabo.*
import rocks.dnaka91.mabo.buf.*

public object Sample : Encode, Size {
    override fun encode(w: ByteBuffer) {
    }

    override fun size(): Int = 0

    companion object : Decode<Sample> {
        override fun decode(r ByteBuffer): Result<Sample> = Result.success(Sample)
    }
}


