crates/mabo-kotlin/tests/snapshots/render__render@attributes_min_ws.mabo.snap
---
source: crates/mabo-kotlin/tests/render.rs
description: "#[deprecated=\"don't use\",compress]\n#[validate(in_range(min=100,max=200),non_empty)]\nstruct Sample"
input_file: crates/mabo-parser/tests/inputs/attributes_min_ws.mabo
---
--- sample.kt

package sample

import java.math.BigInteger
import java.nio.ByteBuffer
import kotlin.UByte
import kotlin.UShort
import kotlin.UInt
import kotlin.ULong

import rocks.dnaka91.mabo.*
import rocks.dnaka91.mabo.buf.*

public object Sample : Decode, Encode Size {
    override fun encode(w: ByteBuffer) {
    }

    override fun size(): Int = 0

}


