crates/mabo-kotlin/tests/snapshots/render__render@enum_min_ws.mabo.snap
---
source: crates/mabo-kotlin/tests/render.rs
description: "enum Sample<T>{One@1,Two(u32@1,u64@2,T@3)@2,Three{field1:u32@1,field2:bool@2,field3:T@3}@3}"
input_file: crates/mabo-parser/tests/inputs/enum_min_ws.mabo
---
--- sample.kt

package sample

import java.math.BigInteger
import java.nio.ByteBuffer
import kotlin.UByte
import kotlin.UShort
import kotlin.UInt
import kotlin.ULong

import rocks.dnaka91.mabo.*
import rocks.dnaka91.mabo.buf.*

public sealed interface Sample {
    public object One : Sample, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(1) + 0

    }

    public data class Two<T>(
        val n0: UInt,
        val n1: ULong,
        val n2: T,
    ) : Sample, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(2) + 0 +
            Sizer.sizeField(1) { Sizer.sizeU32(this.N0) } +
            Sizer.sizeField(2) { Sizer.sizeU64(this.N1) } +
            Sizer.sizeField(3) { this.N2.size() } +
            Sizer.sizeFieldId(END_MARKER)

    }

    public data class Three<T>(
        val field1: UInt,
        val field2: Boolean,
        val field3: T,
    ) : Sample, Decode, Encode, Size {
        override fun size(): Int = Sizer.sizeVariantId(3) + 0 +
            Sizer.sizeField(1) { Sizer.sizeU32(this.Field1) } +
            Sizer.sizeField(2) { Sizer.sizeBool(this.Field2) } +
            Sizer.sizeField(3) { this.Field3.size() } +
            Sizer.sizeFieldId(END_MARKER)

    }
}


