crates/mabo-kotlin/tests/snapshots/render__render@import_basic.mabo.snap
---
source: crates/mabo-kotlin/tests/render.rs
description: "use other::schema::Sample;\nuse second::submodule;"
input_file: crates/mabo-parser/tests/inputs/import_basic.mabo
---
--- sample.kt

package sample

import java.math.BigInteger
import java.nio.ByteBuffer
import kotlin.UByte
import kotlin.UShort
import kotlin.UInt
import kotlin.ULong

import rocks.dnaka91.mabo.*
import rocks.dnaka91.mabo.buf.*


